Prepare secured Render deployment
